<resources>
    <string name="app_name">CourseOrganizer</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Missing password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_course_list">Course List</string>
    <string name="prompt_course_title">Title</string>
    <string name="prompt_course_description">Description</string>
    <string name="action_cancel">Cancel</string>
    <string name="prompt_course_session">session (planned)</string>
    <string name="title_activity_add_course">Add new course</string>
    <string name="invalid_empty">This input must not be empty</string>
    <string name="logout">Logout</string>
    <string name="title_activity_learning_unit_list">Learning units</string>
    <string name="prompt_learning_unit_title">Title</string>
    <string name="prompt_learning_unit_description">Description</string>
    <string name="prompt_learning_unit_hours">Planned working hours</string>
    <string name="title_activity_add_learning_unit">Add learning unit</string>
    <string name="action_add">Add</string>
    <string name="unit_hours">hours</string>
    <string name="title_activity_edit_learning_unit">Edit learning unit</string>
    <string name="action_back">back</string>
    <string name="action_edit">edit</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="finished_recording">Finished recording and updated learning unit</string>
    <string name="progress">Progress</string>
    <string name="time_spent">Time spent (min)</string>
    <string name="learning_unit_tab1">Learning unit</string>
    <string name="learning_unit_tab2">notes</string>
    <string name="note">note</string>
    <string name="title_activity_add_learning_unit_note">add new note</string>
    <string name="loggedin_user">logged in as %s</string>
    <string name="export">export (csv)</string>
    <string name="export_pdf">mail pdf export</string>
    <string name="error_export">"an error occured - could not export data "</string>
    <string name="export_succesful">exported data to file \"%s\"</string>
    <string name="error_picture">Could not create picture</string>
    <string name="picture_successful">Added picture successfully</string>
    <string name="import_title">import</string>
    <string name="title_activity_import_courses">import</string>
    <string name="choose_csv_file">Choose a file in csv format</string>
    <string name="error_import">Could not import data</string>
    <string name="import_successful">Successfully imported data</string>
    <string name="email_choose_provider">Choose your email provider</string>
    <string name="email_subject_export">Your export of CourseOrganizer</string>
    <string name="email_text_export">You will find your exported pdf as attachement.</string>
    <string name="timer_running">Timer running since %d seconds.</string>
</resources>