<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/menuGroup1">
        <android:item
            android:id="@+id/menuUser"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/loggedin_user"
            iconTint="@color/black"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/menuGroup2">
        <android:item
            android:id="@+id/btnCourseList"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/title_activity_course_list"
            iconTint="@color/black"
            app:showAsAction="never" />

        <android:item
            android:id="@+id/btnLogout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout"
            iconTint="@color/white"
            app:showAsAction="ifRoom" />
    </group>
</menu>