<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/learningUnitTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/prompt_learning_unit_title"
            android:hint="@string/prompt_learning_unit_title"
            android:inputType="text"
            android:text="@{viewModel.title}"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/learningUnitDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:autofillHints="@string/prompt_learning_unit_description"
            android:hint="@string/prompt_learning_unit_description"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/learningUnitTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/learningUnitHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:autofillHints="@string/prompt_learning_unit_hours"
            android:hint="@string/prompt_learning_unit_hours"
            android:inputType="number"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/learningUnitDescription"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/wrapperButtons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/learningUnitHours">

            <Button
                android:id="@+id/btnEditLearningUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:text="@string/action_edit"
                />

            <Button
                android:id="@+id/btnCancelEditLearningUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/action_back" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/wrapperButtons"
            app:layout_constraintStart_toStartOf="@+id/wrapperButtons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>